# yummybox

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Containerfile.local  Containerfile.pipeline  README.md  build.rs  docker-compose.yaml  justfile  spec.md  task.md
.github/workflows/: ci.yml  e2e.yml
.spec/: change-user-language.md  color-palette-redesign.md  current-week-view.md  definition-of-done.md  footer-version-display.md  html-element-support-when-importing-meals.md  import-duplicate-check.md  llm-recipe-import.md  meal-cooking-view.md  meal-jsonld-export.md  recipe-import.md  simplify-dependencies.md  split-import-add-meal-and-meal-overview-views.md  ui-glass-makeover.md  unified-meal-image-input.md  unify-url-bulk-import.md
src/: bring.rs  data_dir.rs  db.rs  error.rs  export_import.rs  jsonld.rs  llm_import.rs  main.rs  model.rs  recipe.rs  routes.rs  state.rs  static_assets.rs
tests/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts
tests/e2e/: _helpers.ts  add-meal.spec.ts  bring-integration.spec.ts  clipboard-paste.spec.ts  cooking-view.spec.ts  delete-meal.spec.ts  edit-meal-detail.spec.ts  edit-meal-full.spec.ts  edit-meal.spec.ts  home-page.spec.ts  i18n.spec.ts  image-url.spec.ts  import-bulk.spec.ts  import-llm.spec.ts  import-meal.spec.ts  import-paste.spec.ts  language-switcher.spec.ts  meal-images.spec.ts  planner-ops.spec.ts  planner.spec.ts  search-meals.spec.ts  theme-toggle.spec.ts  view-meals.spec.ts
web/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/e2e/: ambient-background.spec.ts
web/src/: app.css
web/src/lib/: Icon.svelte  MealForm.svelte  api.test.ts  api.ts  llm-config.svelte.ts  llm-config.test.ts  motion.ts  page-validation.test.ts  theme.svelte.ts  theme.ts  types.ts  validation.test.ts  validation.ts  week.test.ts  week.ts
web/src/lib/components/: ImageInput.svelte
web/src/lib/i18n/: de.ts  en.ts  i18n.test.ts  index.ts  state.svelte.ts  types.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/meals/: +page.svelte
web/src/routes/meals/[id]/: +page.svelte
web/src/routes/planner/: +page.svelte
