[package]
name = "mealme"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
build = "build.rs"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["json", "query", "macros", "tokio", "http1"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
rusqlite = { version = "0.40", features = ["bundled"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
