[package]
name = "yummybox"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
build = "build.rs"

[[bin]]
name = "yummybox"
path = "src/main.rs"

[dependencies]
ammonia = "4"
axum = { version = "0.8", default-features = false, features = ["json", "query", "tokio", "http1", "multipart"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "webp"] }
recipe-scraper = "0.1"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "webpki-roots", "json", "form"] }
scraper = "0.27"
genai = "0.6"
base64 = "0.22"
rand = "0.10"
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "chrono", "macros"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = { version = "8", default-features = false, features = ["deflate"] }

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.43"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[package.metadata.sqlx]
migrations-dir = "migrations"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
strip = true # Strip debug symbols